# quant-lab

./: .gitignore  pyproject.toml  talib_sanity_check.py  tradable_instruments.ipynb
trading/notebooks/: plot_sine_wave.ipynb
