[project]
name = "quant-lab"
version = "0.1.0"
description = "This is my dev environment for learning Python. I do this through building a trading bot (e.g. a swing trading bot applying the NNFX momentum trading method/system)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "ccxt>=4.5.59",
    "dotenv>=0.9.9",
    "eth-account>=0.13.7",
    "hyperliquid-python-sdk>=0.24.0",
    "matplotlib>=3.11.0",
    "numpy>=2.2.6",
    "oandapyv20>=0.7.2",
    "pandas>=2.3.3",
    "pandas-stubs>=3.0.3.260530",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "schedule>=1.2.2",
    "ta-lib>=0.6.8",
    "termcolor>=3.3.0",
    "websockets>=16.0",
    "yfinance>=1.4.1",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pyright>=1.1.410",
    "ruff>=0.15.18",
    "types-pytz>=2026.2.0.20260518",
    "types-requests>=2.33.0.20260518",
    "types-termcolor>=1.1.6.2",
]
